unpackaged/main/default/objects/Plan_de_Venta__c/Plan_de_Venta__c.object-meta.xml
<CustomObject>
    <label>Plan de Venta</label>
    <nameField>
        <displayFormat>Plan de Venta-{000000}</displayFormat>
        <label>Plan de Venta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan de Venta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>