unpackaged/main/default/objects/Plan_de_Venta__c/fields/Ahorro_voluntario_2__c.field-meta.xml
<CustomField>
    <fullName>Ahorro_voluntario_2__c</fullName>
    <description>El usuario registrará el monto de ahorro voluntario de acuerdo a la precalificación del cliente.</description>
    <label>Ahorro voluntario 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>