unpackaged/main/default/objects/Plan_de_Venta__c/fields/Anticipo_Plain_Field__c.field-meta.xml
<CustomField>
    <fullName>Anticipo_Plain_Field__c</fullName>
    <label>Anticipo Plain Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>