unpackaged/main/default/objects/Plan_de_Venta__c/fields/Area_Municipal__c.field-meta.xml
<CustomField>
    <fullName>Area_Municipal__c</fullName>
    <formula>Vivienda__r.Frente_rea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Área Municipal</label>
    <type>Checkbox</type>
</CustomField>