unpackaged/main/default/objects/Plan_de_Venta__c/fields/Atribuible_a_Javer__c.field-meta.xml
<CustomField>
    <fullName>Atribuible_a_Javer__c</fullName>
    <label>Atribuible a Javer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>