unpackaged/main/default/objects/Plan_de_Venta__c/fields/Aval__c.field-meta.xml
<CustomField>
    <fullName>Aval__c</fullName>
    <label>Aval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>