unpackaged/main/default/objects/Plan_de_Venta__c/fields/Avaluo_1__c.field-meta.xml
<CustomField>
    <fullName>Avaluo_1__c</fullName>
    <description>El usuario registrará el monto de gastos por avalúo.</description>
    <label>Avalúo 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>