unpackaged/main/default/objects/Plan_de_Venta__c/fields/Avaluo_2__c.field-meta.xml
<CustomField>
    <fullName>Avaluo_2__c</fullName>
    <description>El usuario registrará el monto de gastos por avalúo</description>
    <label>Avalúo 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>