unpackaged/main/default/objects/Plan_de_Venta__c/fields/Bonficacion__c.field-meta.xml
<CustomField>
    <fullName>Bonficacion__c</fullName>
    <label>Bonficación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por mes</fullName>
            </value>
            <value>
                <fullName>Contado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>