unpackaged/main/default/objects/Plan_de_Venta__c/fields/Bonificacion_Excepci_n_de_Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Bonificacion_Excepci_n_de_Plan_de_Venta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bonificación Excepción de Plan de Venta2</label>
    <type>Checkbox</type>
</CustomField>