unpackaged/main/default/objects/Plan_de_Venta__c/fields/Bonificacion_Excepcion_de_Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Bonificacion_Excepcion_de_Plan_de_Venta__c</fullName>
    <formula>IF( Importe_Descuento__c &gt;  Monto_Descuento_Pre_autorizado__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excepción Bonificación Plan de Venta</label>
    <type>Checkbox</type>
</CustomField>