unpackaged/main/default/objects/Plan_de_Venta__c/fields/ByPass_NuevaReestructura__c.field-meta.xml
<CustomField>
    <fullName>ByPass_NuevaReestructura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass_NuevaReestructura</label>
    <type>Checkbox</type>
</CustomField>