unpackaged/main/default/objects/Plan_de_Venta__c/fields/Calc_Precios_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Calc_Precios_Bypass__c</fullName>
    <label>Calc Precios Bypass</label>
    <type>DateTime</type>
</CustomField>