unpackaged/main/default/objects/Plan_de_Venta__c/fields/Cantidad_de_Promociones_y_Paquetes__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Promociones_y_Paquetes__c</fullName>
    <label>Cantidad de Promociones y Paquetes</label>
    <summaryFilterItems>
        <field>Producto_de_Plan_de_Venta__c.Tipo_de_Producto__c</field>
        <operation>contains</operation>
        <value>Promoción de Venta, Paquete</value>
    </summaryFilterItems>
    <summaryForeignKey>Producto_de_Plan_de_Venta__c.Plan_de_Venta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>