unpackaged/main/default/objects/Plan_de_Venta__c/fields/Cantidad_de_reubicaciones__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_reubicaciones__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cantidad de Reubicaciones</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>