unpackaged/main/default/objects/Plan_de_Venta__c/fields/Casilla_Descuento_Empleado_Javer__c.field-meta.xml
<CustomField>
    <fullName>Casilla_Descuento_Empleado_Javer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Descuento Empleado Javer</label>
    <type>Checkbox</type>
</CustomField>