unpackaged/main/default/objects/Plan_de_Venta__c/fields/Check_Aprobado_Rechazado__c.field-meta.xml
<CustomField>
    <fullName>Check_Aprobado_Rechazado__c</fullName>
    <formula>TEXT(Estatus_Plan_de_venta__c )=&quot;En Progreso&quot; || 
TEXT(Estatus_Plan_de_venta__c )=&quot;Rechazado&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Aprobado Rechazado</label>
    <type>Checkbox</type>
</CustomField>