unpackaged/main/default/objects/Plan_de_Venta__c/fields/Chk_Aprob_1_Regalos_MKT__c.field-meta.xml
<CustomField>
    <fullName>Chk_Aprob_1_Regalos_MKT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk Aprob-+1 Regalos MKT</label>
    <type>Checkbox</type>
</CustomField>