unpackaged/main/default/objects/Plan_de_Venta__c/fields/Chk_Aprob_Decuento_Empleado_JAVER__c.field-meta.xml
<CustomField>
    <fullName>Chk_Aprob_Decuento_Empleado_JAVER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk Aprob-Decuento Empleado JAVER</label>
    <type>Checkbox</type>
</CustomField>