unpackaged/main/default/objects/Plan_de_Venta__c/fields/Chk_Aprob_Excepcion_Bonif_Plan_Venta__c.field-meta.xml
<CustomField>
    <fullName>Chk_Aprob_Excepcion_Bonif_Plan_Venta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk Aprob-Excepcion Bonif Plan Venta</label>
    <type>Checkbox</type>
</CustomField>