unpackaged/main/default/objects/Plan_de_Venta__c/fields/Chk_Aprob_Excepcion_Fondo_Garntia__c.field-meta.xml
<CustomField>
    <fullName>Chk_Aprob_Excepcion_Fondo_Garntia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk Aprob-Excepción Fondo Garntía</label>
    <type>Checkbox</type>
</CustomField>