unpackaged/main/default/objects/Plan_de_Venta__c/fields/Chk_Aprob_Paq_Promo_Venta_Duplicadas__c.field-meta.xml
<CustomField>
    <fullName>Chk_Aprob_Paq_Promo_Venta_Duplicadas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk Aprob-Paq/Promo Venta Duplicadas</label>
    <type>Checkbox</type>
</CustomField>