unpackaged/main/default/objects/Plan_de_Venta__c/fields/Chk_Aprob_Reubiciacion__c.field-meta.xml
<CustomField>
    <fullName>Chk_Aprob_Reubiciacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk Aprob-Reubiciación</label>
    <type>Checkbox</type>
</CustomField>