unpackaged/main/default/objects/Plan_de_Venta__c/fields/Chk_Aprob_VO_menor_P_Min_Venta__c.field-meta.xml
<CustomField>
    <fullName>Chk_Aprob_VO_menor_P_Min_Venta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk Aprob-VO menor P Min Venta</label>
    <type>Checkbox</type>
</CustomField>