unpackaged/main/default/objects/Plan_de_Venta__c/fields/Chk_Formalixacion_Informaci_n_Completa__c.field-meta.xml
<CustomField>
    <fullName>Chk_Formalixacion_Informaci_n_Completa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk Formalixacion - Información Completa</label>
    <type>Checkbox</type>
</CustomField>