unpackaged/main/default/objects/Plan_de_Venta__c/fields/Chk_ReStruct_Prod_Plan_de_Venta_Creados__c.field-meta.xml
<CustomField>
    <fullName>Chk_ReStruct_Prod_Plan_de_Venta_Creados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk ReStruct- Prod Plan de Venta Creados</label>
    <type>Checkbox</type>
</CustomField>