unpackaged/main/default/objects/Plan_de_Venta__c/fields/Chk_ReStruct_Vivienda_Asignada__c.field-meta.xml
<CustomField>
    <fullName>Chk_ReStruct_Vivienda_Asignada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk ReStruct- Vivienda Asignada</label>
    <type>Checkbox</type>
</CustomField>