unpackaged/main/default/objects/Plan_de_Venta__c/fields/Clase_de_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Clase_de_Bonificacion__c</fullName>
    <formula>TEXT(Lista_de_Precios_Bonificacion_Reciente__r.Clase_de_Bonificacion__c)</formula>
    <label>Clase de Bonificación</label>
    <type>Text</type>
</CustomField>