unpackaged/main/default/objects/Plan_de_Venta__c/fields/Clase_de_Financiemiento__c.field-meta.xml
<CustomField>
    <fullName>Clase_de_Financiemiento__c</fullName>
    <formula>TEXT( Lista_de_Precios_Financiamien_Reciente__r.Clase_de_Financiamiento__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clase de Financiemiento</label>
    <type>Text</type>
</CustomField>