unpackaged/main/default/objects/Plan_de_Venta__c/fields/Cobranza_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Cobranza_Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cobranza Comercial</label>
    <referenceTo>Cobranza_Comercial__c</referenceTo>
    <relationshipLabel>Plan de Venta (Cobranza Comercial)</relationshipLabel>
    <relationshipName>Plan_de_Venta1</relationshipName>
    <type>Lookup</type>
</CustomField>