unpackaged/main/default/objects/Plan_de_Venta__c/fields/Cobranza_Comercial_Reestructura__c.field-meta.xml
<CustomField>
    <fullName>Cobranza_Comercial_Reestructura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cobranza Comercial Reestructura</label>
    <referenceTo>Cobranza_Comercial__c</referenceTo>
    <relationshipLabel>Plan de Venta</relationshipLabel>
    <relationshipName>Plan_de_Venta</relationshipName>
    <type>Lookup</type>
</CustomField>