unpackaged/main/default/objects/Plan_de_Venta__c/fields/Codigo_Estatus_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Estatus_Vivienda__c</fullName>
    <formula>Vivienda__r.Estatus_Vivienda__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo Estatus Vivienda</label>
    <type>Text</type>
</CustomField>