unpackaged/main/default/objects/Plan_de_Venta__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentarios</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>