unpackaged/main/default/objects/Plan_de_Venta__c/fields/Comentarios_Reubicaci_n__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Reubicaci_n__c</fullName>
    <label>Comentarios Reubicación</label>
    <type>TextArea</type>
</CustomField>