unpackaged/main/default/objects/Plan_de_Venta__c/fields/Compara_Cred_Eng_Source_Formula__c.field-meta.xml
<CustomField>
    <fullName>Compara_Cred_Eng_Source_Formula__c</fullName>
    <formula>TEXT( Creditos_mas_Enganche__c * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compara Cred+Eng Source_Formula</label>
    <type>Text</type>
</CustomField>