unpackaged/main/default/objects/Plan_de_Venta__c/fields/Compara_Cred_Eng_Source_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Compara_Cred_Eng_Source_PlainField__c</fullName>
    <label>Compara Cred+Eng Source_PlainField</label>
    <length>50</length>
    <type>Text</type>
</CustomField>