unpackaged/main/default/objects/Plan_de_Venta__c/fields/Compara_VO_Source_Formula__c.field-meta.xml
<CustomField>
    <fullName>Compara_VO_Source_Formula__c</fullName>
    <formula>TEXT(Valor_Operacion_Formula__c *100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compara VO Source_Formula</label>
    <type>Text</type>
</CustomField>