unpackaged/main/default/objects/Plan_de_Venta__c/fields/Condiciones_Pago_Venta_Anticipada__c.field-meta.xml
<CustomField>
    <fullName>Condiciones_Pago_Venta_Anticipada__c</fullName>
    <description>Flag automático cuando se cumplen ciertas condiciones si el proceso es venta anticipada</description>
    <label>Condiciones Pago Venta Anticipada (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>