unpackaged/main/default/objects/Plan_de_Venta__c/fields/Condiciones_Pago_Venta_Anticipada_FLAG__c.field-meta.xml
<CustomField>
    <fullName>Condiciones_Pago_Venta_Anticipada_FLAG__c</fullName>
    <formula>Venta_Anticipada__c &amp;&amp;
!ISBLANK(Fecha_Proyeccion_escritura__c )
/* Falta Enganche = 10% */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flag automático cuando se cumplen ciertas condiciones si el proceso es venta anticipada</inlineHelpText>
    <label>Condiciones Pago Venta Anticipada</label>
    <type>Checkbox</type>
</CustomField>