unpackaged/main/default/objects/Plan_de_Venta__c/fields/Contador_Promo__c.field-meta.xml
<CustomField>
    <fullName>Contador_Promo__c</fullName>
    <formula>Lista_de_Precios_Promo_Precio_Reciente__r.Cantidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contador Promo $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>