unpackaged/main/default/objects/Plan_de_Venta__c/fields/Crear_Pagare_Enganche_en_CC__c.field-meta.xml
<CustomField>
    <fullName>Crear_Pagare_Enganche_en_CC__c</fullName>
    <formula>IF(Suma_Total_Pagares_Preventa__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crear Pagaré Enganche en CC</label>
    <type>Checkbox</type>
</CustomField>