unpackaged/main/default/objects/Plan_de_Venta__c/fields/Credito_Neto_1_Plain_Field__c.field-meta.xml
<CustomField>
    <fullName>Credito_Neto_1_Plain_Field__c</fullName>
    <label>Credito Neto 1 Plain Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>