unpackaged/main/default/objects/Plan_de_Venta__c/fields/Credito_Neto_Final_1__c.field-meta.xml
<CustomField>
    <fullName>Credito_Neto_Final_1__c</fullName>
    <formula>Monto_de_Credito_1__c + Subcuenta_Vivienda_1__c + Ahorro_Voluntario_1__c - Total_de_Gastos_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crédito Neto Final 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>