unpackaged/main/default/objects/Plan_de_Venta__c/fields/Credito_Neto_Final_2__c.field-meta.xml
<CustomField>
    <fullName>Credito_Neto_Final_2__c</fullName>
    <formula>Monto_de_Credito_2__c + Subcuenta_Vivienda_2__c + Ahorro_voluntario_2__c - Total_de_Gastos_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crédito Neto Final 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>