unpackaged/main/default/objects/Plan_de_Venta__c/fields/Credito_Neto_Final_3__c.field-meta.xml
<CustomField>
    <fullName>Credito_Neto_Final_3__c</fullName>
    <formula>Monto_de_Credito_3__c +  Subcuenta_Vivienda_3__c +  Ahorro_Voluntario_3__c -  Total_de_Gastos_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crédito Neto Final 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>