unpackaged/main/default/objects/Plan_de_Venta__c/fields/Creditos_mas_Enganche__c.field-meta.xml
<CustomField>
    <fullName>Creditos_mas_Enganche__c</fullName>
    <formula>ROUND( Credito_Neto_Final_1__c +
				   Credito_Neto_Final_2__c +
				   Credito_Neto_Final_3__c +
				   Anticipo__c +
				   Subsidio__c +
				   Enganche_a_Pagar__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Créditos + Enganche</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>