unpackaged/main/default/objects/Plan_de_Venta__c/fields/Cuadra_Enganche_vs_Pagares_Preventa__c.field-meta.xml
<CustomField>
    <fullName>Cuadra_Enganche_vs_Pagares_Preventa__c</fullName>
    <formula>IF( Diferencia_Engance_vs_Pagares__c = 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuadra Enganche vs Pagares Preventa?</label>
    <type>Checkbox</type>
</CustomField>