unpackaged/main/default/objects/Plan_de_Venta__c/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <label>Debug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>