unpackaged/main/default/objects/Plan_de_Venta__c/fields/Descuento__c.field-meta.xml
<CustomField>
    <fullName>Descuento__c</fullName>
    <description>Sirve para que el usuario registre el % que requiera para la venta.</description>
    <label>% Descuento</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>