unpackaged/main/default/objects/Plan_de_Venta__c/fields/Descuento_Empleado_Javer__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Empleado_Javer__c</fullName>
    <description>Sirve para que el usuario registre manualmente el porcentaje que se le va a considerar a la venta como descuento Empleado.</description>
    <label>% Descuento Empleado Javer</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>