unpackaged/main/default/objects/Plan_de_Venta__c/fields/Descuento_Pre_autorizado_Empleado_Javer__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Pre_autorizado_Empleado_Javer__c</fullName>
    <label>% Descto Pre-autorizado Empleado Javer</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>