unpackaged/main/default/objects/Plan_de_Venta__c/fields/Diferencia_a_Pagar_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_a_Pagar_PlainField__c</fullName>
    <label>Diferencia a Pagar PlainField</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>