unpackaged/main/default/objects/Plan_de_Venta__c/fields/Diferencia_Engance_vs_Pagares__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_Engance_vs_Pagares__c</fullName>
    <formula>Round(Enganche_a_Pagar__c,2) -  Round(Suma_Total_Pagares_Preventa__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia Engance vs Pagarés</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>