unpackaged/main/default/objects/Plan_de_Venta__c/fields/Diferencia_FinAutorizado_vs_FinSolicitad__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_FinAutorizado_vs_FinSolicitad__c</fullName>
    <formula>Diferencia_a_Pagar__c - Monto_Fin_Autorizado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia FinAutorizado vs FinSolicitad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>