unpackaged/main/default/objects/Plan_de_Venta__c/fields/Direcci_n_Principal__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_Principal__c</fullName>
    <formula>Oportunidad__r.Dictaminacion__r.Direccion_Principal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección Principal</label>
    <type>Text</type>
</CustomField>