unpackaged/main/default/objects/Plan_de_Venta__c/fields/Direccion_Oficial__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Oficial__c</fullName>
    <formula>Vivienda__r.Direccion__c</formula>
    <label>Dirección Oficial</label>
    <type>Text</type>
</CustomField>