unpackaged/main/default/objects/Plan_de_Venta__c/fields/Direccion_Regional__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Regional__c</fullName>
    <formula>Oportunidad__r.Fraccionamiento__r.Estado_fracc__c</formula>
    <label>Dirección Regional</label>
    <type>Text</type>
</CustomField>