unpackaged/main/default/objects/Plan_de_Venta__c/fields/Domicilio_Aval__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_Aval__c</fullName>
    <label>Domicilio Aval</label>
    <type>TextArea</type>
</CustomField>