unpackaged/main/default/objects/Plan_de_Venta__c/fields/El_Registro_Esta_Totalmente_Aprobado__c.field-meta.xml
<CustomField>
    <fullName>El_Registro_Esta_Totalmente_Aprobado__c</fullName>
    <formula>IF(Rutas_de_Aprobacion_Pendientes__c &lt;= 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>El Registro Esta Totalmente Aprobado</label>
    <type>Checkbox</type>
</CustomField>