unpackaged/main/default/objects/Plan_de_Venta__c/fields/En_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>En_aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En aprobación</label>
    <type>Checkbox</type>
</CustomField>