unpackaged/main/default/objects/Plan_de_Venta__c/fields/En_aprovacion__c.field-meta.xml
<CustomField>
    <fullName>En_aprovacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En aprovación</label>
    <type>Checkbox</type>
</CustomField>