unpackaged/main/default/objects/Plan_de_Venta__c/fields/Enganche_a_Pagar__c.field-meta.xml
<CustomField>
    <fullName>Enganche_a_Pagar__c</fullName>
    <formula>IF( Valor_Operacion_Plain_Field__c -
	   (Credito_Neto_1_Plain_Field__c +  
		   Credito_Neto_2_Plain_Field__c +  
		   Credito_Neto_3_Plain_Field__c +   
		   Subsidio_Plain_Field__c  + 
		   Anticipo_Plain_Field__c) &lt;= 0,
			0.00,
			Valor_Operacion_Plain_Field__c -
	   (Credito_Neto_1_Plain_Field__c +  
		   Credito_Neto_2_Plain_Field__c +  
		   Credito_Neto_3_Plain_Field__c +   
		   Subsidio_Plain_Field__c  + 
		   Anticipo_Plain_Field__c)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enganche a Pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>