unpackaged/main/default/objects/Plan_de_Venta__c/fields/Enviar_Rutas_a_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Enviar_Rutas_a_Aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar Rutas a Aprobación</label>
    <type>Checkbox</type>
</CustomField>