unpackaged/main/default/objects/Plan_de_Venta__c/fields/Esquina__c.field-meta.xml
<CustomField>
    <fullName>Esquina__c</fullName>
    <formula>Vivienda__r.Esquina__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Esquina</label>
    <type>Checkbox</type>
</CustomField>