unpackaged/main/default/objects/Plan_de_Venta__c/fields/Estatis_Promo_Precio_en_Lista__c.field-meta.xml
<CustomField>
    <fullName>Estatis_Promo_Precio_en_Lista__c</fullName>
    <formula>TEXT(Lista_de_Precios_Promo_Precio_Reciente__r.Estatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatis Promo Precio en Lista</label>
    <type>Text</type>
</CustomField>