unpackaged/main/default/objects/Plan_de_Venta__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <formula>CASE(TEXT(Vivienda__r.Estatus__c), 
&#39;11&#39;, &#39;Reservado&#39;, 
&#39;13&#39;, &#39;Formalizado&#39;,
&#39;14&#39;, &#39;Escriturado&#39;,
&#39;15&#39;, &#39;Entregado&#39;,
&#39;17&#39;, &#39;Disponible&#39;,
&#39;20&#39;, &#39;No Disponible&#39;,
&#39;21&#39;, &#39;Migración / Disponible&#39;,
&#39;Estatus No Disponible&#39;)</formula>
    <label>Estatus Vivienda</label>
    <type>Text</type>
</CustomField>