unpackaged/main/default/objects/Plan_de_Venta__c/fields/Estatus_Formula_TXT__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Formula_TXT__c</fullName>
    <formula>TEXT(Estatus_Plan_de_venta__c) &amp; &quot;        Tipo: &quot; &amp;  TEXT(Tipo_de_Plan_de_Venta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus</label>
    <type>Text</type>
</CustomField>