unpackaged/main/default/objects/Plan_de_Venta__c/fields/Estatus_LN__c.field-meta.xml
<CustomField>
    <fullName>Estatus_LN__c</fullName>
    <formula>TEXT(Oportunidad__r.Account.Estatus_Lista_Negra_QEQ__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus LN</label>
    <type>Text</type>
</CustomField>