unpackaged/main/default/objects/Plan_de_Venta__c/fields/Estatus_Plan_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Plan_de_venta__c</fullName>
    <label>Estatus Plan de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Progreso</fullName>
                <default>true</default>
                <label>En Progreso</label>
            </value>
            <value>
                <fullName>Por Aprobar</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Reubicado</fullName>
            </value>
            <value>
                <fullName>Reestructurado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>