unpackaged/main/default/objects/Plan_de_Venta__c/fields/Estatus_Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Proceso_de_Venta__c</fullName>
    <formula>TEXT(Oportunidad__r.StageName)</formula>
    <label>Estatus Proceso de Venta</label>
    <type>Text</type>
</CustomField>