unpackaged/main/default/objects/Plan_de_Venta__c/fields/Estatus_Promocion_de_Precio_Formula__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Promocion_de_Precio_Formula__c</fullName>
    <label>Estatus Promoción de Precio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitada</fullName>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>