unpackaged/main/default/objects/Plan_de_Venta__c/fields/Estatus_Reembolso__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Reembolso__c</fullName>
    <description>Muestra el estatus de la ruta de aprobación del Pagaré Reembolso Escritura ya sea que se haya enviado automáticamente o por medio del botón solicitar reembolso</description>
    <label>Estatus Reembolso por Escritura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Por Aprobar</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>