unpackaged/main/default/objects/Plan_de_Venta__c/fields/Excepci_n_Descuento_Empleado_JVR_Formula__c.field-meta.xml
<CustomField>
    <fullName>Excepci_n_Descuento_Empleado_JVR_Formula__c</fullName>
    <formula>IF(Descuento_Empleado_Javer__c &gt; Descuento_Pre_autorizado_Empleado_Javer__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excepción Descuento Empleado JAVER</label>
    <type>Checkbox</type>
</CustomField>