unpackaged/main/default/objects/Plan_de_Venta__c/fields/Excepcion_Descuento_Empleado_JAVER__c.field-meta.xml
<CustomField>
    <fullName>Excepcion_Descuento_Empleado_JAVER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excepción Descuento Empleado JAVER2</label>
    <type>Checkbox</type>
</CustomField>