unpackaged/main/default/objects/Plan_de_Venta__c/fields/Excepcion_Fondo_de_Garantia__c.field-meta.xml
<CustomField>
    <fullName>Excepcion_Fondo_de_Garantia__c</fullName>
    <formula>IF(Fondo_de_Garantia_No_Cubierto__c, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excepción Fondo de Garantía</label>
    <type>Checkbox</type>
</CustomField>