unpackaged/main/default/objects/Plan_de_Venta__c/fields/Exepcion_Fondo_de_Garantia_Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Exepcion_Fondo_de_Garantia_Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exepción Fondo de Garantía Aprobado</label>
    <type>Checkbox</type>
</CustomField>