unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_Avaluo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Avaluo__c</fullName>
    <formula>Vivienda__r.Fecha_Ultimo_Avaluo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Avalúo</label>
    <type>Date</type>
</CustomField>